# ks-devkit

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  install.sh  package.json
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/conformance-claimant/: README.md  main.py  pyproject.toml
sdk/python/examples/capability_writer_demo/: README.md  main.py  manifest.yaml
sdk/python/src/ks_app/: __init__.py  app.py  auth_resolver.py  canonical.py  capability.py  capability_context.py  config.py  config_consistency.py  config_handle.py  context.py  (+16 more)
sdk/python/tests/: test_app.py  test_app_integration.py  test_app_keystone_env.py  test_auth_middleware.py  test_auth_resolver.py  test_canonical.py  test_canonical_conformance.py  test_capability_call.py  test_capability_context.py  test_capability_decorator.py  test_capability_http_backend.py  test_capability_mcp_backend.py  test_capability_reuse.py  test_capability_writer_demo.py  test_cli.py  test_config.py  test_config_consistency.py  test_config_handle.py  test_config_handler.py  test_config_ui.py  test_config_ui_middleware.py  test_context.py  test_crypto.py  test_dispatcher_client.py  test_dispatcher_invoke_chain_conformance.py  test_dispatcher_invoke_conformance.py  test_embedding.py  test_embedding_vector_store_conformance.py  test_errors.py  test_events_client.py  test_extensions.py  test_fetch_env_cmd.py  test_health.py  test_http.py  test_idempotency.py  test_jwks_verifier.py  test_keystore.py  test_lifespan.py  test_llm.py  test_manifest.py  (+18 more)
(+505 files in other folders)
