[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ks-app-sdk"
version = "0.9.0"
description = "Keystone 平台 MCP Service SDK（Python）"
authors = [{name = "Keystone Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn>=0.30",
    "starlette>=0.37",
    "pyyaml>=6.0",
    "PyJWT[crypto]>=2.8.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "httpx>=0.27",
    "websockets>=12.0",
]
classifiers = [
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.0", "respx>=0.21"]

[project.scripts]
ksapp = "ks_app.cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
